# samna_salta

./: .gitignore  .pylintrc  API_DOCUMENTATION.md  BOT_FUNCTIONALITY_TEST_REPORT.md  DELIVERY_PACKAGE.md  DEPLOYMENT.md  DEVELOPMENT.md  FINAL_TEST_REPORT.md  MULTILINGUAL_SOLUTION.md  OPTIMIZATION_REPORT.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PRICING_FIX_REPORT.md  PRODUCTION_CHECKLIST.md  PRODUCTION_DEPLOYMENT.md  Procfile  QA_REPORT.md  README.md  RENDER_DEPLOYMENT.md  bot_test_report.txt  env.example  main.py  pyproject.toml  render-build.sh  render.yaml  requirements.txt  run_local.sh  setup.py  test.db
.cursor/rules/: coding-general-guidlines.mdc
config/: config.yaml
data/: orders.db  samna_salta.db
docs/: API_REFERENCE.md  ARCHITECTURE.md  CODE_CLEANUP_SUMMARY.md  CURRENT_STATUS.md  DATABASE_TROUBLESHOOTING.md  DEPLOYMENT.md  MENU_MANAGEMENT.md  PRODUCT_IMAGES_GUIDE.md  README.md  SCHEMA_MIGRATION_SUMMARY.md  SUPABASE_SETUP.md  TRANSLATION_FIXES_SUMMARY.md
locales/: en.json  he.json
scripts/: add_language_column.py  create_tables.py  diagnose_db.py  generate_test_data.py  insert_customers.py  seed_constants.py  seed_constants_simple.py  setup_supabase.py  setup_webhook.py  verify_deployment.py
src/: __init__.py  config.py  container.py  dtos.py  main.py  states.py
src/api/: health_checks.py
src/application/: __init__.py
src/application/dtos/: cart_dtos.py  order_dtos.py
src/application/use_cases/: __init__.py  cart_management_use_case.py  customer_registration_use_case.py  order_analytics_use_case.py  order_creation_use_case.py  order_status_management_use_case.py  product_catalog_use_case.py
src/bot/: states.py
src/bot/handlers/: __init__.py  admin.py  cart.py  menu.py  onboarding.py
src/bot/keyboards/: menu.py
src/database/: models.py  operations.py
src/db/: __init__.py  constraints.py  models.py  operations.py
src/domain/entities/: __init__.py  customer_entity.py  product_entity.py
src/domain/repositories/: __init__.py  cart_repository.py  customer_repository.py  order_repository.py  product_repository.py
src/domain/value_objects/: __init__.py  customer_id.py  customer_name.py  delivery_address.py  money.py  (+7 more)
src/handlers/: __init__.py  admin.py  cart.py  menu.py  start.py
src/infrastructure/: __init__.py
src/keyboards/: language_keyboards.py  menu_keyboards.py  order_keyboards.py
src/services/: __init__.py  admin_service.py  business_service.py  cart_service.py  customer_order_service.py  delivery_service.py  invoice_service.py  notification_service.py  order_service.py  product_service.py
src/utils/: config.py  constants.py  constants_manager.py  error_handler.py  helpers.py  i18n.py  image_handler.py  language_manager.py  logger.py  multilingual_content.py  security.py  text_formatter.py  translations.py
tests/: README.md  conftest.py  pytest.ini  run_tests.py  test_basic.py  test_bot_automation.py  test_config.py  test_db_operations.py  test_domain.py  test_final_coverage_push.py  test_handlers.py  test_infrastructure.py  test_infrastructure_components.py  test_integration.py  test_main.py  test_missing_use_cases.py  test_models.py  test_repositories.py  test_services.py  test_use_cases.py  test_utils.py
(+46 files in other folders)
